# stm32-mcp2515-driver

./: .gitignore  CMakeLists.txt  stm32-mcp2515-driver.ioc
Core/Inc/: App.h  mcp2515.h  spi.h  uart.h
Core/Src/: App.cpp  STM32SPI.cpp  main.c  mcp2515.cpp  spi.cpp  uart.cpp
Drivers/user_drivers/Inc/: ispi.hpp  mcp2515.hpp
Drivers/user_drivers/Src/: mcp2515.cpp
Drivers/user_drivers/TESTS/: test_main.cpp
